--- a/views/insert1.ejs
+++ b/views/insert1.ejs
@@ -1,10 +1,10 @@
 <% include header %>
   <nav class="navbar navbar-inverse  ">
   <ul class="nav navbar-nav">
-    <li><a href="/form1">主頁</a></li>
-    <li><a href="/form1">上傳</a></li>
+    <li><a href="/">主頁</a></li>
+    <li><a href="/">上傳</a></li>
     <li class="active"><a href="/insert" >成績管理</a></li>
-        <li style="float:right;"><a href="/">登入</a></li>
+        <li style="float:right;"><a href="/login">登入</a></li>
   </ul>  
   </nav>
 <h2>Line Bot成績管理</h2>
@@ -57,7 +57,7 @@
 <aside class="col-lg-2 col-sm-2 col-lg-pull-9 col-sm-pull-9">
        
             <ul class="nav nav-pills nav-stacked">
-              <li><a href="/form1">上傳學生資料</a></li>
+              <li><a href="/">上傳學生資料</a></li>
               <li class="active"><a href="/insert">新增學生成績</a></li>              
               <li><a href="/index">修改學生成績</a></li>
               <li><a href="/index4">刪除學生成績</a></li>
