--- a/views/header.ejs
+++ b/views/header.ejs
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" >
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>A4249103_葉丞瑋</title>
+<title>Line Bot 成績管理</title>
 <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 <script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.8.0.js"></script>
 <script src="http://malsup.github.com/jquery.form.js"></script>
