--- a/views/index1.ejs
+++ b/views/index1.ejs
@@ -1,8 +1,8 @@
 <% include header %>
   <nav class="navbar navbar-inverse  ">
   <ul class="nav navbar-nav">
-    <li><a href="/form1">主頁</a></li>
-    <li><a href="/form1">上傳</a></li>
+    <li><a href="/">主頁</a></li>
+    <li><a href="/">上傳</a></li>
     <li class="active"><a href="/insert">成績管理</a></li>
      <li style="float:right;"><a href="/">登入</a></li>
   </ul>  
@@ -17,7 +17,7 @@
             data: {
                 date: $('.time').val()
                 test: $('.test').val()
-                classname:$('.classname').val()
+                classname:$('.CourseName').val()
             },
             success: function (data) {
                 console.log(data);
@@ -44,14 +44,14 @@
     <option value="期末考">期末考</option>
   </select><BR><BR>
   <label>輸入課堂名稱</label>
-  <input type="text" name="classname"><BR><BR>
-  <input type="submit" name="submit" onclick="getValue()">
+  <input type="text" name="CourseName" value=""><BR><BR>
+  <input type="submit" name="submit"  value = "建立" onclick="getValue()">
 </form>
 </article>
 <aside class="col-lg-2 col-sm-2 col-lg-pull-9 col-sm-pull-9">
        
            <ul class="nav nav-pills nav-stacked">
-              <li><a href="/form1">上傳學生資料</a></li>
+              <li><a href="/">上傳學生資料</a></li>
               <li><a href="/insert">新增學生成績</a></li>
               <li><a href="/index">修改學生成績</a></li>
               <li><a href="/index4">刪除學生成績</a></li>
