--- a/views/update.ejs
+++ b/views/update.ejs
@@ -4,7 +4,7 @@
     <li><a href="/">主頁</a></li>
     <li><a href="/">上傳</a></li>
     <li class="active"><a href="/insert" >成績管理</a></li>
-        <li style="float:right;"><a href="/login">登入</a></li>
+        <li><a href="/login">登入</a></li>
   </nav>
 <h2>Line Bot成績管理</h2>
 <script>
