--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -1,4 +1,4 @@
-<footer style="width: 73%;height:35px; position:absolute;bottom:20px;left:195px;background: #333;"><font face="標楷體" size="5" color="white"><p align="center">Line Bot 成績管理</p></font></footer>
+<footer style="width: 100%;height:5%; position:absolute;bottom:1px;left:0%;background: #333;"><font face="標楷體" size="5" color="white"><p align="center">Line Bot 成績管理</p></font></footer>
 <script src="/javascript/bootstrap.js"></script>
 </body>
 </html>
