--- a/views/form1.ejs
+++ b/views/form1.ejs
@@ -4,7 +4,7 @@
     <li><a href="/">主頁</a></li>
     <li class="active"><a href="/">上傳</a></li>
     <li><a href="/insert">成績管理</a></li>
-          <li style="float:right;"><a href="/login">登入</a></li>
+          <li><a href="/login">登入</a></li>
   </ul>  
   </nav>
     <script type="text/javascript">
