--- a/views/header.ejs
+++ b/views/header.ejs
@@ -5,10 +5,10 @@
 <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;">
 <title>Line Bot 成績管理</title>
 <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-<script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.8.0.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="http://malsup.github.com/jquery.form.js"></script>
 </head>
-<body class="container">
+<body class="">
  <!--  <a href="/new-entry" class="btn btn-primary pull-right">
     Write in the guestbook
   </a>
