--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,10 +1,10 @@
 <% include header %>
-  <nav class="navbar navbar-inverse  ">
+  <nav class="navbar navbar-inverse">
   <ul class="nav navbar-nav">
     <li><a href="/">主頁</a></li>
     <li><a href="/">上傳</a></li>
     <li class="active"><a href="/insert" >成績管理</a></li>
-      <li style="float:right;"><a href="/login">登入</a></li>
+    <li><a href="/login">登入</a></li>
   </ul>  
   </nav>
 <h2>Line Bot成績管理</h2>
