--- a/views/index1.ejs
+++ b/views/index1.ejs
@@ -4,7 +4,7 @@
     <li><a href="/">主頁</a></li>
     <li><a href="/">上傳</a></li>
     <li class="active"><a href="/insert">成績管理</a></li>
-     <li style="float:right;"><a href="/">登入</a></li>
+     <li><a href="/">登入</a></li>
   </ul>  
   </nav>
 <h2>建立成績單</h2>
