--- a/views/select3.ejs
+++ b/views/select3.ejs
@@ -47,7 +47,7 @@
 //   } 
 </script>
 <article class="col-lg-offset-1 col-sm-offset-1 col-lg-8 col-sm-8 col-lg-push-2 col-sm-push-2"> 
-  <form action="/update2" method="post">
+  <form action="/index" method="get">
     <table class="table table-bordered table-striped" border="2" id = "score">
       <tr>
         <td  align='center' valign="middle"><font size="5" face="標楷體"><strong>學號</strong></font></th>
@@ -67,7 +67,7 @@
 <aside class="col-lg-2 col-sm-2 col-lg-pull-9 col-sm-pull-9">
        
            	<ul class="nav nav-pills nav-stacked">
-              <li><a href="/form1">上傳學生資料</a></li>
+              <li><a href="/">上傳學生資料</a></li>
               <li><a href="/insert">新增學生成績</a></li> 
               <li><a href="/index">修改學生成績</a></li>
               <li><a href="/index4">刪除學生成績</a></li>
