--- a/views/update2.ejs
+++ b/views/update2.ejs
@@ -11,14 +11,11 @@
 <script>
     function getValue() {
         $.ajax({
-            url: '/index2',
+            url: '/update2',
             dataType: 'json',
             type: 'get',
             data: {
-                course: $('#text').val(),
-                transcript: $('#text1').val(),
-                name: $('#text2').val(),
-                grade: $('#text3').val()    
+                course: $('.text').val(),  
             },
             success: function (data) {
                 console.log(data);
@@ -33,7 +30,7 @@
 <article class="col-lg-offset-1 col-sm-offset-1 col-lg-8 col-sm-8 col-lg-push-2 col-sm-push-2">
     <form action="/update3" method="post">
     <label>輸入班級:</label>
-    <input type="text" id = "text" name="text">
+    <input type="text" name = "text" name="text">
         <input type="submit" name="submit" value = "確定"onclick ="getValue()">
     <BR><BR>
     <label>選擇成績單:</label>
@@ -42,10 +39,10 @@
     </select>  
         <BR><BR>
     <label>學生姓名:</label>        
-    <label><%-data%></label>
+ <input type="text" id = "text" name="text">
       <BR><BR>
     <label>目前成績:</label>
-    <label><%-data1%></label>
+ <input type="text" id = "text" name="text">
         <BR><BR>
     <label>輸入修改的成績:</label>        
     <input type="text" id = "text3" name="text3" value="">
