--- a/views/select3.ejs
+++ b/views/select3.ejs
@@ -57,7 +57,7 @@
       <% for ( var j = 0 ; j < data.length ; j++){ %>
       <tr>
         <td width="100" align="center"><font size="5" face="標楷體"><strong><%-data[j].Student_ID%></strong></font></td>
-        <td width="100" align="center"><font size="5" face="標楷體"><strong><%-data[j].Grade%>分</strong></font></td>
+        <td width="100" align="center"><font size="5" face="標楷體"><strong><%-data[j].Grade%></strong></font></td>
         <td width="100" align="center"><font size="3" face="標楷體"><strong><input type="submit" value="修改成績"></strong></font></td>
       </tr>
             <% } %>
